Pull in 1.7.78 updates

--- a/utils/reswrap.1
+++ b/utils/reswrap.1
@@ -222,7 +222,7 @@ longer than the resource file.
 .SH AUTHOR
 This manpage was originally written by Torsten Landschoff (torsten@debian.org)
 for the Debian distribution of the FOX Toolkit, and is currently maintained
-by Jeroen van der Zijp (jeroen@fox-toolkit.com).
+by Jeroen van der Zijp (jeroen@fox-toolkit.net).
 .SH COPYRIGHT
 Copyright \(co 1997,2020 Jeroen van der Zijp.
 .br
